<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:useDefaultMargins="true"
            android:columnCount="3"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="7dp"
            tools:context=".Account.RegistrationActivity">

            <TextView
                android:id="@+id/capacity"
                android:layout_gravity="start"
                style="@style/TextViews"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/capacity" />

            <SeekBar
                android:id="@+id/seekBarCapacityUpdate"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_gravity="fill_horizontal"
                android:layout_row="1"
                android:layout_columnSpan="3"
                android:layout_column="0"
                android:max="15"
                android:progress="1"/>

            <Switch
                android:id="@+id/switchComputerUpdate"
                style="@style/Switches"
                android:layout_gravity="fill_horizontal"
                android:layout_row="2"
                android:layout_columnSpan="3"
                android:layout_column="0"
                android:text="@string/computer" />

            <Switch
                android:id="@+id/switchWifiUpdate"
                style="@style/Switches"
                android:layout_gravity="fill_horizontal"
                android:layout_columnSpan="3"
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/wifi" />

            <Switch
                android:id="@+id/switchWhiteboardUpdate"
                style="@style/Switches"
                android:layout_gravity="fill_horizontal"
                android:layout_columnSpan="3"
                android:layout_row="4"
                android:layout_column="0"
                android:text="@string/engineering" />

            <Switch
                android:id="@+id/switchAvailableUpdate"
                style="@style/Switches"
                android:layout_gravity="fill_horizontal"
                android:layout_columnSpan="3"
                android:layout_row="5"
                android:layout_column="0"
                android:text="@string/available" />

            <TextView
                android:id="@+id/building"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViews"
                android:layout_row="6"
                android:layout_column="0"
                android:text="@string/building" />

            <RadioGroup
                android:id="@+id/radioGroupBuildingUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="7"
                android:layout_columnSpan="3"
                android:layout_column="0" >

                <RadioButton
                    android:id="@+id/radioButtonNuriganUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nurigan" />

                <RadioButton
                    android:id="@+id/radioButtonHyangpaganUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hyangpagan" />
            </RadioGroup>

            <EditText
                android:id="@+id/editTextRoomNumberUpdate"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_row="8"
                android:layout_column="1"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/btnUpdateRoom"
                android:layout_row="9"
                android:layout_column="0"
                android:layout_height="37dp"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:text="@string/update_room" />

            <TextView
                android:id="@+id/roomnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViews"
                android:layout_row="8"
                android:layout_column="0"
                android:text="@string/room_number" />

            <Button
                android:id="@+id/btnDeleteRoom"
                android:layout_row="9"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_gravity="end"
                android:layout_height="30dp"
                android:background="#F44336"
                android:textColor="#FFFFFF"
                android:text="@string/delete_room" />

        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>